bat.bool1.nearhundred.NearHundred.scala.error
Compilation error:
NearHundred:2: error: type mismatch;
 found   : Unit
 required: Boolean
  if ((n >= 90 && n<=110) || (n >= 190 && n<=210)) {
  ^